--- a/task10/表单.css
+++ b/task10/表单.css
@@ -1,17 +1,110 @@
+header{
+    background:#1d7ad9 ;
+    color: #ffffff;
+    height: 40px;
+    vertical-align: middle;
+}
+header span{
+    line-height: 40px;
+}
+header span a{
+    color: #ffffff;
+}
+.navbar-style{
+    background: #f9f9f9;
+    border:none;
+    border-radius: 0;
+}
+.nav>li> a{
+    background: #ffffff;
+    padding: 5px 10px;
+    margin:20px 10px  ;
+    box-shadow: 1px 1px #d7d7d7;
+    font-size: 16px;
+}
+.navbar  .nav li a:hover {
+    background: #1d7ad9;
+    color: #ffffff;
+}
+.navbar  .nav li a:focus{
+    color: #000;
+    background: #ffffff;
+}
+.navbar .nav li .active,
+.navbar .nav li .active:hover,
+.navbar .nav li .active:focus{
+    background: #1d7ad9;
+    color: #ffffff;
+}
+.stepinfo{
+    width: 25%;
+    position: relative;
+    text-align:center;
+    float: left;
+}
+.stepinfo-circle{
+    padding: 0 6px ;
+    background-color: #cccccc;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    margin-top: -10px;
+    left: 50%;
+    margin-left: -10px;
+    color: #ffffff;
+
+}
+.stepinfo-bar{
+    padding: 3px 0;
+    width: 100%;
+    background-color: #cccccc;
+    position: absolute;
+    top: 50%;
+    margin-top: -3px
+}
+.stepinfo-text{
+    margin-top: 50%;
+    display: inline-block;
+}
+.stepinfo-active{
+    background:#ff7f02;
+}
 select{
     -webkit-appearance: none;
     background: url(select.png) no-repeat  95%  ;
     padding: 10px 30px 10px 15px;
-
 }
-.box1{
-    padding: 20px 0;
-    background-color: #2a6496
+.box1-1{
+    padding: 10px 0 10px 30px;
+    background-color: #f4f4f4;
+    border:#ccc 1px solid;
+    background: url("box1.png")  no-repeat 5px 50%;
+}
+.box1-2{
+    padding: 10px 0 10px 30px;
+    background-color: #f4f4f4;
+    border:#ccc 1px solid;
+    background: url("box2.png")  no-repeat 5px 50%;
+}
+.box1-3{
+    padding: 10px 0 10px 30px;
+    background-color: #f4f4f4;
+    border:#ccc 1px solid;
+    background: url("box3.png")  no-repeat 5px 50%;
 }
 .box2{
     padding: 5% 0;
-    background: #ebebeb;
+    background: #fbfcff;
     position: relative;
+    border-left:1px solid #ccc;
+    border-right:1px solid #ccc;
+}
+.box3{
+    text-align: center;
+    padding: 15% 0 10% 0;
+    border:1px solid #ccc;
+    border-top:0;
 }
 .box-select{
     position:absolute;
@@ -19,8 +112,12 @@ select{
     top: 50%;
     margin-top: -21px
 }
+.radio-inline{
+    padding-left: 0;
+    margin-left: 20px;
+}
 input[type=radio] {
-    display: none
+    display: none;
 }
 input[type=radio] + span {
     display: inline-block;
@@ -39,4 +136,45 @@ input[type=radio]:checked + span {
 }
 .size-number{
     width: 50px;
+}
+.next-step{
+    background: #e15053;
+    color: #ffffff;
+    border:0;
+    border-radius: 2px;
+    padding: 10px 30px;
+}
+footer{
+    margin-top: 5%;
+    margin-bottom: 30px;
+}
+.slogan{
+    font-size: 18px;
+    margin-bottom: 10px;
+}
+footer ul{
+    list-style: none;
+    padding-left: 0;
+}
+footer li{
+    display:inline-block;
+    padding:0 10px 10px 0;
+}
+footer li a{
+    color: #333;
+}
+footer img{
+    width: 80px;
+    position: absolute;
+    top:0;
+}
+.copyright{
+    background:#1d7ad9 ;
+    font-size: 10px;
+    padding: 5px 0;
+    text-align: center;
+    color: #ffffff;
+}
+.copyright p{
+    margin: 0;
 }
