--- a/task11/a.less
+++ b/task11/a.less
@@ -1,6 +1,7 @@
 body{
   background-color: #eff0f4;
   margin: 0;
+  font-family: "黑体";
 }
 .header-side-style(@style){
   color: #ffffff;
@@ -60,6 +61,9 @@ header{
     border:none;
     cursor: pointer;
     outline:none;
+    color: #ffffff;
+    font-size: 16px;
+    font-family: 黑体;
   }
   .forget{
     float: right;
